deployment/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-product
spec:
  selector:
    matchLabels:
      app: ecommerce-product
  template:
    metadata:
      labels:
        app: ecommerce-product
        role: ecommerce-products
    spec:
      containers:
        - name: ecommerce-product
          image: ghcr.io/hamidreza-ygh/ecommerce-product:latest
          ports:
            - name: product
              containerPort: 3001
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-product
spec:
  selector:
    app: ecommerce-product
  ports:
    - name: product
      port: 3001
      protocol: TCP
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name:  "ecommerce-product-auth"
spec:
  forwardAuth:
    address: "http://api.tenantodo.life/authentication/auth"
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Auth-User"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-product
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "control-tier-ecommerce-product-auth@kubernetescrd"
spec:
  rules:
    - host: api.tenantodo.life
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: ecommerce-product
                port:
                  number: 3001
